exports[`ControlMobileDropdown > react > renders correctly by default #0`] = `
<button
  type="button"
  class="block ml-24 mr-0 px-0 py-16 hover:text-gui-hover focus:text-gui-focus focus:outline-none"
  data-id="meganav-control-mobile-dropdown"
  aria-expanded="false"
  aria-controls="meganav-mobile-dropdown"
>
  <svg
    class="h-24 w-24 transition-colors ui-icon-cool-black"
    data-id="meganav-control-mobile-dropdown-menu"
  >
    <use xlink:href="#sprite-menu"></use></svg
  ><svg
    class="h-24 w-24 transition-colors hidden ui-icon-cool-black"
    data-id="meganav-control-mobile-dropdown-close"
  >
    <use xlink:href="#sprite-close"></use>
  </svg>
</button>
`;

exports[`ControlMobileDropdown > react > renders correctly on click #0`] = `
<button
  type="button"
  class="block ml-24 mr-0 px-0 py-16 hover:text-gui-hover focus:text-gui-focus focus:outline-none"
  data-id="meganav-control-mobile-dropdown"
  aria-expanded="true"
  aria-controls="meganav-mobile-dropdown"
>
  <svg
    class="h-24 w-24 transition-colors ui-icon-cool-black hidden"
    data-id="meganav-control-mobile-dropdown-menu"
  >
    <use xlink:href="#sprite-menu"></use></svg
  ><svg
    class="h-24 w-24 transition-colors ui-icon-cool-black"
    data-id="meganav-control-mobile-dropdown-close"
  >
    <use xlink:href="#sprite-close"></use>
  </svg>
</button>
`;

exports[`ControlMobileDropdown > vw > renders correctly by default #0`] = `
<button
  type="button"
  class="block ml-24 mr-0 px-0 py-16 hover:text-gui-hover focus:text-gui-focus focus:outline-none"
  data-id="meganav-control-mobile-dropdown"
  aria-expanded="false"
  aria-controls="meganav-mobile-dropdown"
>
  <svg
    class="h-24 w-24 transition-colors ui-icon-cool-black"
    data-id="meganav-control-mobile-dropdown-menu"
  >
    <use xlink:href="#sprite-menu"></use></svg
  ><svg
    class="h-24 w-24 transition-colors hidden ui-icon-cool-black"
    data-id="meganav-control-mobile-dropdown-close"
  >
    <use xlink:href="#sprite-close"></use>
  </svg>
</button>
`;

exports[`ControlMobileDropdown > vw > renders correctly on click #0`] = `
<button
  type="button"
  class="block ml-24 mr-0 px-0 py-16 hover:text-gui-hover focus:text-gui-focus focus:outline-none"
  data-id="meganav-control-mobile-dropdown"
  aria-expanded="true"
  aria-controls="meganav-mobile-dropdown"
>
  <svg
    class="h-24 w-24 transition-colors ui-icon-cool-black hidden"
    data-id="meganav-control-mobile-dropdown-menu"
  >
    <use xlink:href="#sprite-menu"></use></svg
  ><svg
    class="h-24 w-24 transition-colors ui-icon-cool-black"
    data-id="meganav-control-mobile-dropdown-close"
  >
    <use xlink:href="#sprite-close"></use>
  </svg>
</button>
`;
